--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ python:
   - "2.7"
   - "3.3"
   - "3.4"
+  - "3.5"
 install:
   - sudo apt-get update
   # We do this conditionally because it saves us some downloading if the
@@ -24,7 +25,12 @@ install:
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip nose numpy scipy scikit-image matplotlib
   - source activate test-environment
+  - pip install python-coveralls
   - python setup.py install
 
-script: nosetests
+script:
+  - nosetests
+
+after_success:
+  - coveralls
   # Your test script goes here
