--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ install:
   - python setup.py install
 
 script:
-  - nosetests
+  - nosetests --with-coverage --cover-package=lightct --logging-level=INFO
 
 after_success:
   - coveralls
