--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - conda info -a
 
   # Replace dep1 dep2 ... with your dependencies
-  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip nose numpy scipy scikit-image matplotlib
+  - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip mock nose numpy scipy scikit-image matplotlib
   - source activate test-environment
   - pip install python-coveralls
   - python setup.py install
