--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+  before_script: # configure a headless display to test plot generation
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start 
 install:
   - sudo apt-get update
   # We do this conditionally because it saves us some downloading if the
