--- a/.travis.yml
+++ b/.travis.yml
@@ -21,16 +21,15 @@ install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
   # Replace dep1 dep2 ... with your dependencies
   - conda create -q -n test-environment python=$TRAVIS_PYTHON_VERSION pip mock nose numpy scipy scikit-image matplotlib
   - source activate test-environment
   - pip install python-coveralls
   - python setup.py install
-  before_script: # configure a headless display to test plot generation
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start 
+#  before_script: # configure a headless display to test plot generation
+#  - "export DISPLAY=:99.0"
+#  - "sh -e /etc/init.d/xvfb start"
+#  - sleep 3 # give xvfb some time to start 
 script:
   - nosetests --with-coverage --cover-package=lightct --logging-level=INFO
 
