--- a/.travis.yml
+++ b/.travis.yml
@@ -26,10 +26,10 @@ install:
   - source activate test-environment
   - pip install python-coveralls
   - python setup.py install
-#  before_script: # configure a headless display to test plot generation
-#  - "export DISPLAY=:99.0"
-#  - "sh -e /etc/init.d/xvfb start"
-#  - sleep 3 # give xvfb some time to start 
+  before_script: # configure a headless display to test plot generation
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 script:
   - nosetests --with-coverage --cover-package=lightct --logging-level=INFO
 
